@@ -1,3 +1,8 @@
+Wed Dec 05 19:04:58 2001  George Lebl <jirka@5z.com>
+
+	* xstuff.[ch], basep-widget.[ch], foobar-widget.c:  Set the WM_STRUT
+	  hint for panels
+
 2001-12-05  Alex Larsson  <alexl@redhat.com>
 
 	* launcher.c (create_launcher):
